--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-draggable": "^4.4.4",
     "react-masonry-css": "^1.0.16",
     "react-moment": "^1.1.1",
+    "react-responsive-masonry": "^2.1.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
