--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "react-draggable": "^4.4.4",
     "react-masonry-css": "^1.0.16",
     "react-moment": "^1.1.1",
+    "react-redux": "^7.2.5",
     "react-responsive-masonry": "^2.1.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
